# iphone-price-monitor-Andres-Torrez

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  scheduled.yml  scraper-cron.yml
data/processed/: prices.csv  prices.json
reports/: render.py
scraper/: cli.py  http_client.py  models.py
scraper/media/: images.py
scraper/pipeline/: dedupe.py  normalize.py  run.py
scraper/report/: render.py
scraper/report/templates/: index.html.j2  styles.css
scraper/sources/: base.py  github_pages_catalog.py
scraper/storage/: csv_store.py  json_store.py
scripts/: cron.example  dev_loop.ps1  run_all.ps1  run_pipeline.sh
tests/: test_dedupe.py  test_normalize.py
